@@ -353,7 +353,7 @@ Version 2.2.0 - The "We only delayed it to release on our 4th birthday. And then
 		* Kad users/files also updated on the Kad Tab.
 		* Backed out a now obsolete change made in CommentDialogLst.cpp
 		  (comments are not related to remote filenames anymore).
-	
+
 	Tiziano Müller:
 		* Fixed compilation when --enable-geoip is used in conjunction
 		  with the ld-flag "--as-needed".
@@ -386,6 +386,7 @@ Version 2.2.0 - The "We only delayed it to release on our 4th birthday. And then
 		* Added Option to use generic ipfilter.dat.
 		* Made possible to select which translations get build and
 		  installed.
+		* Install only manpages in requested Langs.
 
 	wuischke:
 		* Add emulecollection support on aMule ED2K Links Handler
